[project]
name = "typed-utils"
version = "0.1.0"
description = "A small typed Python utility package with math, string, and list helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
