[project]
name = "typed-utils"
version = "0.1.0"
description = "A small typed Python utility package with math, string, and list helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=typed_utils --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["typed_utils"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_configs = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
